2005-04-21  Gary Cramblitt (PhantomsDad)
        * New Hungarian Hadifix (mbrola and txt2pho) voice available at
            http://tkltrans.sourceforge.net/
          Since Hungarian requires ISO 8859-2 character encoding, added encoding option to
          Hadifix plugin.  Also, Hadifix plugin auto-selects a voice matching the user's
          chosen language.
        * Abbreviate USA and UK country names to save space.
        * Display male/female icons in Festival Interactive configuration dialog.
        * Use new Select Talker dialog in Talker Chooser filter.

2005-04-17  Gary Cramblitt (PhantomsDad)
        * Actions to be taken on notifications may now be specified at three levels
            Specific event of specific application
            All other events of specific application
            All other events
        * When the last event of an application is deleted, delete the app from
          Notifications list.

2005-04-12  Gary Cramblitt (PhantomsDad)
        * Enhanced notification options.  Ability to customize each application event.
        * Enhanced Talker chooser for notifications and Job Manager.
        * Fix bug in Talker matching algorithm.

2005-03-18  Gary Cramblitt (PhantomsDad)
        * Added --systray cmdline option to KTTSMgr, which causes it to start minimized in system
          tray.
        * Added --autoexit cmdline option to KTTSMgr, which causes it to exit when no longer
          speaking any text jobs.
        * Added AutoStartManager and AutoExitManager options to config.  These cause kttsd
          to automatically start KTTSMgr when a text job starts, and automatically exit
          KTTSMgr when all text jobs have finished speaking.

2005-03-16  Gary Cramblitt (PhantomsDad)
        * Bug fix.  Interruption messages are spoken using the Talker of the interrupting message.
          So if default Talker is en, and you do sayMessage "Guten Tag" "de", the "Text Interrupted.